--- a/templates/template/src/app/home/home.page.html
+++ b/templates/template/src/app/home/home.page.html
@@ -1,20 +1,15 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Blank
+      Aplicação Ionic 6
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <h2>Conteudo do projeto</h2>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  {{ mensagem }}
+  <br/>
+  <ion-button (click)="mudarMensagemAoClicar()">Clique</ion-button>
 </ion-content>
